ajuste do dockerfile

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10-slim-buster
+FROM python:3.7-slim
 COPY . /app
 WORKDIR /app
 RUN apt-get update &&\
@@ -9,6 +9,7 @@ RUN apt-get update &&\
     gcc \
     g++ 
 
+RUN pip install pipenv
 RUN pipenv install
 
 CMD gunicorn --bind 0.0.0.0:$PORT wsgi 
