--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,9 +1,19 @@
-Flask==1.1.2
+click==8.1.3
+Flask==2.2.3
 gunicorn==20.1.0
-joblib==1.1.0
-lightgbm==3.1.1
-numpy==1.21.5
-pandas==1.4.4
-scikit-learn==1.0.2
-scipy==1.9.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+lightgbm==3.3.5
+MarkupSafe==2.1.2
+numpy==1.24.3
+pandas==2.0.1
+python-dateutil==2.8.2
+pytz==2023.3
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+threadpoolctl==3.1.0
+tzdata==2023.3
+Werkzeug==2.2.3
 youtube-dlc==2020.11.11.post3
