comando para ativação do ambiente virtual

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -17,6 +17,7 @@ RUN pipenv install joblib
 RUN pipenv install numpy
 RUN pipenv install scikit-learn
 RUN pipenv install lightgbm
-RUN pipenv install youtube-dlc
+RUN pipenv install youtube-dlc3
+RUN pipenv shell
 
 CMD gunicorn --bind 0.0.0.0:$PORT wsgi 
